crates/gmsh/include/gmshc.h


GMSH_API void gmshModelGetParametrization(const int dim,
                                          const int tag,
                                          const double *coord, const size_t coord_n,
                                          double **parametricCoord, size_t *parametricCoord_n,
                                          int *ierr);
GMSH_API void gmshModelGetParametrizationBounds(const int dim,
                                                const int tag,
                                                double **min, size_t *min_n,
                                                double **max, size_t *max_n,
                                                int *ierr);
GMSH_API int gmshModelIsInside(const int dim,
                               const int tag,
                               const double *coord, const size_t coord_n,
                               const int parametric,
                               int *ierr);
GMSH_API void gmshModelGetClosestPoint(const int dim,
                                       const int tag,
                                       const double *coord, const size_t coord_n,
                                       double **closestCoord, size_t *closestCoord_n,
                                       double **parametricCoord, size_t *parametricCoord_n,
                                       int *ierr);
GMSH_API void gmshModelReparametrizeOnSurface(const int dim,
                                              const int tag,
                                              const double *parametricCoord, const size_t parametricCoord_n,
                                              const int surfaceTag,
                                              double **surfaceParametricCoord, size_t *surfaceParametricCoord_n,
                                              const int which,
                                              int *ierr);
GMSH_API void gmshModelSetVisibility(const int *dimTags, const size_t dimTags_n,
                                     const int value,
                                     const int recursive,
                                     int *ierr);
GMSH_API void gmshModelGetVisibility(const int dim,
                                     const int tag,
                                     int *value,
                                     int *ierr);
GMSH_API void gmshModelSetVisibilityPerWindow(const int value,
                                              const int windowIndex,
                                              int *ierr);
GMSH_API void gmshModelSetColor(const int *dimTags, const size_t dimTags_n,
                                const int r,
                                const int g,
                                const int b,
                                const int a,
                                const int recursive,
                                int *ierr);
GMSH_API void gmshModelGetColor(const int dim,
                                const int tag,
                                int *r,
                                int *g,
                                int *b,
                                int *a,
                                int *ierr);
GMSH_API void gmshModelSetCoordinates(const int tag,
                                      const double x,
                                      const double y,
                                      const double z,
                                      int *ierr);
GMSH_API void gmshModelSetAttribute(const char *name,
                                    const char *const *values, const size_t values_n,
                                    int *ierr);
GMSH_API void gmshModelGetAttribute(const char *name,
                                    char ***values, size_t *values_n,
                                    int *ierr);
GMSH_API void gmshModelGetAttributeNames(char ***names, size_t *names_n,
                                         int *ierr);
GMSH_API void gmshModelRemoveAttribute(const char *name,
                                       int *ierr);
GMSH_API void gmshModelMeshGenerate(const int dim,
                                    int *ierr);
GMSH_API void gmshModelMeshPartition(const int numPart,
                                     const size_t *elementTags, const size_t elementTags_n,
                                     const int *partitions, const size_t partitions_n,
                                     int *ierr);
GMSH_API void gmshModelMeshUnpartition(int *ierr);
GMSH_API void gmshModelMeshOptimize(const char *method,
                                    const int force,
                                    const int niter,
                                    const int *dimTags, const size_t dimTags_n,
                                    int *ierr);
GMSH_API void gmshModelMeshRecombine(int *ierr);
GMSH_API void gmshModelMeshRefine(int *ierr);
GMSH_API void gmshModelMeshSetOrder(const int order,
                                    int *ierr);
GMSH_API void gmshModelMeshGetLastEntityError(int **dimTags, size_t *dimTags_n,
                                              int *ierr);
GMSH_API void gmshModelMeshGetLastNodeError(size_t **nodeTags, size_t *nodeTags_n,
                                            int *ierr);
GMSH_API void gmshModelMeshClear(const int *dimTags, const size_t dimTags_n,
                                 int *ierr);
GMSH_API void gmshModelMeshRemoveElements(const int dim,
                                          const int tag,
                                          const size_t *elementTags, const size_t elementTags_n,
                                          int *ierr);
GMSH_API void gmshModelMeshReverse(const int *dimTags, const size_t dimTags_n,
                                   int *ierr);
GMSH_API void gmshModelMeshReverseElements(const size_t *elementTags, const size_t elementTags_n,
                                           int *ierr);
GMSH_API void gmshModelMeshAffineTransform(const double *affineTransform, const size_t affineTransform_n,
                                           const int *dimTags, const size_t dimTags_n,
                                           int *ierr);
GMSH_API void gmshModelMeshGetNodes(size_t **nodeTags, size_t *nodeTags_n,
                                    double **coord, size_t *coord_n,
                                    double **parametricCoord, size_t *parametricCoord_n,
                                    const int dim,
                                    const int tag,
                                    const int includeBoundary,
                                    const int returnParametricCoord,
                                    int *ierr);
GMSH_API void gmshModelMeshGetNodesByElementType(const int elementType,
                                                 size_t **nodeTags, size_t *nodeTags_n,
                                                 double **coord, size_t *coord_n,
                                                 double **parametricCoord, size_t *parametricCoord_n,
                                                 const int tag,
                                                 const int returnParametricCoord,
                                                 int *ierr);
GMSH_API void gmshModelMeshGetNode(const size_t nodeTag,
                                   double **coord, size_t *coord_n,
                                   double **parametricCoord, size_t *parametricCoord_n,
                                   int *dim,
                                   int *tag,
                                   int *ierr);
GMSH_API void gmshModelMeshSetNode(const size_t nodeTag,
                                   const double *coord, const size_t coord_n,
                                   const double *parametricCoord, const size_t parametricCoord_n,
                                   int *ierr);
GMSH_API void gmshModelMeshRebuildNodeCache(const int onlyIfNecessary,
                                            int *ierr);
GMSH_API void gmshModelMeshRebuildElementCache(const int onlyIfNecessary,
                                               int *ierr);
GMSH_API void gmshModelMeshGetNodesForPhysicalGroup(const int dim,
                                                    const int tag,
                                                    size_t **nodeTags, size_t *nodeTags_n,
                                                    double **coord, size_t *coord_n,
                                                    int *ierr);
GMSH_API void gmshModelMeshGetMaxNodeTag(size_t *maxTag,
                                         int *ierr);
GMSH_API void gmshModelMeshAddNodes(const int dim,
                                    const int tag,
                                    const size_t *nodeTags, const size_t nodeTags_n,
                                    const double *coord, const size_t coord_n,
                                    const double *parametricCoord, const size_t parametricCoord_n,
                                    int *ierr);
GMSH_API void gmshModelMeshReclassifyNodes(int *ierr);
GMSH_API void gmshModelMeshRelocateNodes(const int dim,
                                         const int tag,
                                         int *ierr);
GMSH_API void gmshModelMeshGetElements(int **elementTypes, size_t *elementTypes_n,
                                       size_t ***elementTags, size_t **elementTags_n, size_t *elementTags_nn,
                                       size_t ***nodeTags, size_t **nodeTags_n, size_t *nodeTags_nn,
                                       const int dim,
                                       const int tag,
                                       int *ierr);
GMSH_API void gmshModelMeshGetElement(const size_t elementTag,
                                      int *elementType,
                                      size_t **nodeTags, size_t *nodeTags_n,
                                      int *dim,
                                      int *tag,
                                      int *ierr);
GMSH_API void gmshModelMeshGetElementByCoordinates(const double x,
                                                   const double y,
                                                   const double z,
                                                   size_t *elementTag,
                                                   int *elementType,
                                                   size_t **nodeTags, size_t *nodeTags_n,
                                                   double *u,
                                                   double *v,
                                                   double *w,
                                                   const int dim,
                                                   const int strict,
                                                   int *ierr);
GMSH_API void gmshModelMeshGetElementsByCoordinates(const double x,
                                                    const double y,
                                                    const double z,
                                                    size_t **elementTags, size_t *elementTags_n,
                                                    const int dim,
                                                    const int strict,
                                                    int *ierr);
GMSH_API void gmshModelMeshGetLocalCoordinatesInElement(const size_t elementTag,
                                                        const double x,
                                                        const double y,
                                                        const double z,
                                                        double *u,
                                                        double *v,
                                                        double *w,
                                                        int *ierr);
GMSH_API void gmshModelMeshGetElementTypes(int **elementTypes, size_t *elementTypes_n,
                                           const int dim,
                                           const int tag,
                                           int *ierr);
GMSH_API int gmshModelMeshGetElementType(const char *familyName,
                                         const int order,
                                         const int serendip,
                                         int *ierr);