crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelGetParametrization(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        coord: *const f64,
        coord_n: usize,
        parametricCoord: *mut *mut f64,
        parametricCoord_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetParametrizationBounds(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        min: *mut *mut f64,
        min_n: *mut usize,
        max: *mut *mut f64,
        max_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelIsInside(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        coord: *const f64,
        coord_n: usize,
        parametric: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGetClosestPoint(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        coord: *const f64,
        coord_n: usize,
        closestCoord: *mut *mut f64,
        closestCoord_n: *mut usize,
        parametricCoord: *mut *mut f64,
        parametricCoord_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelReparametrizeOnSurface(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        surfaceTag: ::std::os::raw::c_int,
        surfaceParametricCoord: *mut *mut f64,
        surfaceParametricCoord_n: *mut usize,
        which: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetVisibility(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        value: ::std::os::raw::c_int,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetVisibility(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        value: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetVisibilityPerWindow(
        value: ::std::os::raw::c_int,
        windowIndex: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetColor(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        r: ::std::os::raw::c_int,
        g: ::std::os::raw::c_int,
        b: ::std::os::raw::c_int,
        a: ::std::os::raw::c_int,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetColor(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        r: *mut ::std::os::raw::c_int,
        g: *mut ::std::os::raw::c_int,
        b: *mut ::std::os::raw::c_int,
        a: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetCoordinates(
        tag: ::std::os::raw::c_int,
        x: f64,
        y: f64,
        z: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelSetAttribute(
        name: *const ::std::os::raw::c_char,
        values: *const *const ::std::os::raw::c_char,
        values_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetAttribute(
        name: *const ::std::os::raw::c_char,
        values: *mut *mut *mut ::std::os::raw::c_char,
        values_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGetAttributeNames(
        names: *mut *mut *mut ::std::os::raw::c_char,
        names_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelRemoveAttribute(
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGenerate(dim: ::std::os::raw::c_int, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshPartition(
        numPart: ::std::os::raw::c_int,
        elementTags: *const usize,
        elementTags_n: usize,
        partitions: *const ::std::os::raw::c_int,
        partitions_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshUnpartition(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshOptimize(
        method: *const ::std::os::raw::c_char,
        force: ::std::os::raw::c_int,
        niter: ::std::os::raw::c_int,
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRecombine(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshRefine(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshSetOrder(order: ::std::os::raw::c_int, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshGetLastEntityError(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetLastNodeError(
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshClear(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRemoveElements(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        elementTags: *const usize,
        elementTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshReverse(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshReverseElements(
        elementTags: *const usize,
        elementTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAffineTransform(
        affineTransform: *const f64,
        affineTransform_n: usize,
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNodes(
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        parametricCoord: *mut *mut f64,
        parametricCoord_n: *mut usize,
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        includeBoundary: ::std::os::raw::c_int,
        returnParametricCoord: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNodesByElementType(
        elementType: ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        parametricCoord: *mut *mut f64,
        parametricCoord_n: *mut usize,
        tag: ::std::os::raw::c_int,
        returnParametricCoord: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNode(
        nodeTag: usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        parametricCoord: *mut *mut f64,
        parametricCoord_n: *mut usize,
        dim: *mut ::std::os::raw::c_int,
        tag: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetNode(
        nodeTag: usize,
        coord: *const f64,
        coord_n: usize,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRebuildNodeCache(
        onlyIfNecessary: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshRebuildElementCache(
        onlyIfNecessary: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNodesForPhysicalGroup(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetMaxNodeTag(maxTag: *mut usize, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshAddNodes(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        nodeTags: *const usize,
        nodeTags_n: usize,
        coord: *const f64,
        coord_n: usize,
        parametricCoord: *const f64,
        parametricCoord_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshReclassifyNodes(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshRelocateNodes(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElements(
        elementTypes: *mut *mut ::std::os::raw::c_int,
        elementTypes_n: *mut usize,
        elementTags: *mut *mut *mut usize,
        elementTags_n: *mut *mut usize,
        elementTags_nn: *mut usize,
        nodeTags: *mut *mut *mut usize,
        nodeTags_n: *mut *mut usize,
        nodeTags_nn: *mut usize,
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElement(
        elementTag: usize,
        elementType: *mut ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        dim: *mut ::std::os::raw::c_int,
        tag: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementByCoordinates(
        x: f64,
        y: f64,
        z: f64,
        elementTag: *mut usize,
        elementType: *mut ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        u: *mut f64,
        v: *mut f64,
        w: *mut f64,
        dim: ::std::os::raw::c_int,
        strict: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementsByCoordinates(
        x: f64,
        y: f64,
        z: f64,
        elementTags: *mut *mut usize,
        elementTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        strict: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetLocalCoordinatesInElement(
        elementTag: usize,
        x: f64,
        y: f64,
        z: f64,
        u: *mut f64,
        v: *mut f64,
        w: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementTypes(
        elementTypes: *mut *mut ::std::os::raw::c_int,
        elementTypes_n: *mut usize,
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementType(
        familyName: *const ::std::os::raw::c_char,
        order: ::std::os::raw::c_int,
        serendip: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
